...
                #else
                false
                #endif
            }(),
            forceExpiredSession: {
                #if DEBUG
                ProcessInfo.processInfo.environment["ROOBIN_FORCE_EXPIRED_SESSION"] == "1"
                #else
                false
                #endif
            }(),
            forceServiceUnavailable: {
                #if DEBUG
...
